kubernetes/kubeconfigs/2-country-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: country-srv
  namespace: kube-training
spec:
  selector:
    app: country
    type: server
  ports:
  #    accept connection on 8080
  - port: 8080
    #    route trafic to 8081
    #targetPort: 8081
