kubernetes/kubeconfigs/4-city-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: city-srv
  namespace: kube-training
spec:
  selector:
    app: city
    type: server
  ports:
  #accept connection on 8080
  - port: 8080
    #route trafic to 8081
    targetPort: 8011
